--- a/05_condiciones_if-else/static/css/style.css
+++ b/05_condiciones_if-else/static/css/style.css
@@ -3,29 +3,32 @@
     margin: 0;
     box-sizing: border-box;
 }
-.row{
+
+.row {
     display: flex;
     flex-wrap: wrap;
 
 }
-.fila-1{
-margin-left: 20px;
-padding-left: 20px;
+
+.fila-1 {
+    margin-left: 20px;
+    padding-left: 20px;
 }
-p{
-margin-top: 20px;
+
+p {
+    margin-top: 20px;
 
 }
-button{
+
+button {
     padding-left: 20px;
     margin-left: 20px;
     margin-right: 20px;
     margin-bottom: 60px;
     margin-top: 10px;
-padding: 10px;   
-border-radius: 4px;
-border-color: aqua;
-background-color: salmon;
-color: #fff
-;
+    padding: 10px;
+    border-radius: 4px;
+    border-color: aqua;
+    background-color: salmon;
+    color: #fff;
 }
