--- a/07_burger_king/static/css/style.css
+++ b/07_burger_king/static/css/style.css
@@ -12,10 +12,23 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    border-bottom: 1px solid  #9f816f;
 }
-
+.enlaces{
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    margin-left: 20px;
+    margin-top: 10px;
+}
 a {
     text-decoration: none;
+}
+
+.globo {
+    color: #9f816f;
+    display: flex;
+    gap: 8px;
 }
 
 .navegacion {
@@ -24,8 +37,8 @@ a {
 }
 
 .icono {
-    width: 100px;
-    height: 60px;
+width: 95px;
+height: 60px;
 }
 
 .iniciar-sesion {
@@ -47,8 +60,83 @@ a {
 }
 
 .nav-bar-2 {
-        background-color: #F5EBDC;
-        display: flex;
-        justify-content: flex-end;
-        margin-top: 10px;
+    background-color: #F5EBDC;
+    display: flex;
+    justify-content: flex-end;
+    margin-top: 10px;
+    padding-bottom: 20px;
+}
+
+.caja-ancha {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: #fff;
+    background-color: #502314;
+}
+
+/* icono de exclamacion */
+.bi-exclamation-circle-fill {
+    color: #F5EBDC;
+    background-color: #D62300;
+    border-radius: 50%;
+    font-size: 20px;
+}
+
+.detalles {
+    height: 30px;
+    width: 100px;
+    background-color: #502314;
+    border-radius: 14px;
+    border-color: #fff;
+    color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+
+.container {
+    background-color: #F5EBDC;
+}
+
+.row {
+    display: flex;
+justify-content: space-evenly;
+align-items: center;    
+}
+.fila{
+    display: flex;
+flex-direction: column;
+}
+
+   
+
+.caja {
+margin-top: 100px;
+
+width: 500px;
+    background-color: #fff;
+    border-radius: 20px;
+}
+
+.imagen {
+    width: 500px;
+    border-radius: 10px;
+}
+
+
+p{
+    margin-bottom: 20px;
+}
+.btn-caja {
+    padding: 10px;
+}
+
+.celular{
+    height: 700px;
+}
+.row-3{
+background-color: #EFE1CC;
+margin-top: 200px;
 }
