--- a/burger_king/static/css/style.css
+++ b/burger_king/static/css/style.css
@@ -27,7 +27,10 @@ nav {
     align-items: center;
     border-bottom: 2px solid #E0D7C9;
 }
-
+.icono-menu {
+  font-size: 20px;
+color: #502314;
+}
 .enlaces {
     display: flex;
     align-items: center;
