--- a/09_condiciones_repaso_JS/static/css/style.css
+++ b/09_condiciones_repaso_JS/static/css/style.css
@@ -5,22 +5,26 @@
 
 header {
     display: flex;
+    align-items: center;
     width: 100%;
-background-color: blue;
-color: #fff;
-height: 30px;
-padding: 10px;
+    background-color: blue;
+    color: #fff;
+    height: 30px;
+    padding: 10px;
 }
-header h1{
-padding: 10px;
+
+header h1 {
+    padding: 10px;
 }
+
 .container {
     display: flex;
     flex-direction: column;
     padding: 20px 100px;
     gap: 5px;
 }
-button{
+
+button {
     background-color: violet;
     color: aliceblue;
     padding: 5px;
